Add author name and expand Note on Process
- Add Roy Abes to title page (no 'Author:' label)
- Expand Note on Process with:
  - Origin story (second brain app)
  - Weekend of dialogue process
  - Multiple AI partners (Claude, Gemini, ChatGPT)
  - Call for human reviewers

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>The First Life: Freeing the Mind in the Age of AI</title>
     <link rel="stylesheet" href="css/book.css">
     <meta name="description" content="A philosophy of cognitive partnership with AI - how to use technology for presence rather than productivity.">
-    <meta name="author" content="">
+    <meta name="author" content="Roy Abes">
 
     <!-- Open Graph -->
     <meta property="og:title" content="The First Life: Freeing the Mind in the Age of AI">
@@ -32,7 +32,7 @@
         <div class="title-page">
             <h1>The First Life</h1>
             <p class="subtitle">Freeing the Mind in the Age of AI</p>
-            <p class="author"></p>
+            <p class="author">Roy Abes</p>
         </div>
     </article>
 
